--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
         "dev": "vite",
         "build": "vite build"
     },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.0.0",
+        "vue": "^3.4.0"
+    },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-vue": "^5.0.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
